<resources>
    <string name="app_name">App</string>
    <string name="facebook_app_id">1404180256325301</string>
    <string name="遊客首頁">遊客首頁</string>
    <string name="導遊首頁">導遊首頁</string>
    <string name="選擇身分">選擇身分</string>
    <string name="facebook">Facebook登入</string>
    <string name="登出">登出</string>
    <string name="client">遊客首頁</string>
    <string name="button">音訊</string>
    <string name="start">播放</string>
    <string name="pause">暫停</string>
    <string name="stop">停止</string>
    <string name="播放">播放</string>
    <string name="暫停">暫停</string>
    <string name="textview">音檔名稱</string>
    <string name="text">音檔名稱</string>
    <string name="back">返回上一頁</string>
    <string name="title_activity_maps">Map</string>
    <string name="skip">略過</string>
    <string name="map">地圖</string>
    <string name="upload">上傳</string>
    <string name="mysql">MySQL</string>
    <string name="download">下載</string>
    <string name="sqlite">SQLite</string>
    <string name="attrationName">景點名稱</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="pickFile">選擇檔案</string>
    <string name="type">類別</string>
    <string name="audioIntro">音檔簡介</string>
    <string name="uploadAudio">上傳音檔</string>
    <string name="我的最愛">我的最愛</string>
    <string name="我購買的音檔">我所購買的音檔</string>
    <string name="音檔種類">音檔種類</string>
    <string name="設定">設定</string>
    <string name="帳戶">帳戶</string>
    <string name="瀏覽模式">瀏覽模式</string>
    <string name="條列式">條列式</string>
    <string name="地圖">地圖</string>
    <string name="離開">離開</string>
    <string name="設為最愛">設為最愛</string>
    <string name="title_activity_favorite">FavoriteActivity</string>
    <string name="audioname">音檔名稱</string>
    <string name="條列式瀏覽">條列式瀏覽</string>
    <string name="我的帳戶">我的帳戶</string>
    <string name="景點種類">景點種類</string>
    <string name="地標與建築物">地標與建築物</string>
    <string name="自然景觀與公園">自然景觀與公園</string>
    <string name="購物與市集">購物與市集</string>
    <string name="宗教聖地">宗教聖地</string>
    <string name="博物館">博物館</string>
    <string name="古蹟">古蹟</string>
    <string name="國家公園">國家公園</string>
    <string name="碼頭">碼頭</string>
    <string name="單車專用道">單車專用道</string>
    <string name="溫泉">溫泉</string>
    <string name="橋梁">橋梁</string>
</resources>
