<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/我的最愛"
        android:enabled="true"
        android:title="@string/我的最愛"
        android:visible="true" />
    <item
        android:id="@+id/我上傳的音檔"
        android:checkable="false"
        android:enabled="true"
        android:title="我上傳的音檔"
        android:visible="false" />
    <item android:title="@string/景點種類"
        android:id="@+id/景點種類">
        <menu>
            <group
                android:id="@+id/checkable_group"
                android:checkableBehavior="all">
                <!-- Notice how these items inherit from the group. -->
                <item
                    android:id="@+id/setall"
                    android:checked="true"
                    android:title="全選/取消全部" />
                <item
                    android:id="@+id/checkable_item_1"
                    android:checked="true"
                    android:title="@string/地標與建築物" />
                <item
                    android:id="@+id/checkable_item_2"
                    android:checked="true"
                    android:title="@string/自然景觀與公園" />
                <item
                    android:id="@+id/checkable_item_3"
                    android:checked="true"
                    android:title="@string/購物與市集" />
                <item
                    android:id="@+id/checkable_item_4"
                    android:checked="true"
                    android:title="@string/宗教聖地" />
                <item
                    android:id="@+id/checkable_item_5"
                    android:checked="true"
                    android:title="@string/博物館" />
                <item
                    android:id="@+id/checkable_item_6"
                    android:checked="true"
                    android:title="@string/古蹟" />
                <item
                    android:id="@+id/checkable_item_7"
                    android:checked="true"
                    android:title="@string/國家公園" />
                <item
                    android:id="@+id/checkable_item_8"
                    android:checked="true"
                    android:title="@string/碼頭" />
                <item
                    android:id="@+id/checkable_item_9"
                    android:checked="true"
                    android:title="@string/單車專用道" />
                <item
                    android:id="@+id/checkable_item_10"
                    android:checked="true"
                    android:title="@string/溫泉" />
                <item
                    android:id="@+id/checkable_item_11"
                    android:checked="true"
                    android:title="@string/橋梁" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/我的帳戶"
        android:enabled="true"
        android:title="@string/我的帳戶"
        android:visible="true"/>
    <item
        android:id="@+id/條列式瀏覽"
        android:enabled="true"
        android:title="@string/條列式瀏覽" />
</menu>