<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="83dp"
        android:textSize = "30sp"
        android:textColor="@android:color/black"
        android:text="@string/選擇身分" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/遊客首頁"
        android:id="@+id/Button01"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/導遊首頁"
        android:id="@+id/Button02"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/Button01"
        android:layout_alignLeft="@+id/Button01"
        android:layout_alignStart="@+id/Button01" />

</RelativeLayout >

