<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.logintest.UploadActivity">

    <Button
        android:id="@+id/btn_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="135dp"
        android:layout_marginStart="135dp"
        android:text="@string/pickFile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Spinner
        android:id="@+id/spinner_type"
        android:layout_width="220dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="35dp"
        android:layout_marginTop="55dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_attrName"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/tv_type"
        android:layout_marginLeft="35dp" />

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="65dp"
        android:text="@string/type"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_attrName"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/tv_attrName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="30dp"
        android:text="@string/attrationName"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/tv_attrIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audioIntro"
        android:textSize="20sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/tv_type"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner_type"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/tv_type" />

    <EditText
        android:id="@+id/et_intro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="29dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textAlignment="textStart"
        android:gravity="start"
        app:layout_constraintBottom_toTopOf="@+id/btn_file"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_attrIntro"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/tv_audioName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audioname"
        android:textSize="20sp"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/tv_type"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_audioName"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/tv_type" />

    <EditText
        android:id="@+id/et_audioName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/spinner_type"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/tv_audioName" />

</android.support.constraint.ConstraintLayout>
